<resources>
    <string name="app_name">Westsea mobile APP</string>
    <string name="userNameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="scanRFID">Scan RFID</string>
    <string name="scanQR">Scan QR Code</string>
    <string name="nav_scan">Scan</string>
    <string name="nav_add">Add Component</string>
    <string name="nav_list">List</string>
    <string name="nav_pending">Pending</string>
    <string name="logout_button">Logout</string>
    <string name="back">BACK</string>
    <string name="label_addcomponent">Fill all the fields to create the component:</string>
    <string name="et_name_addcomponent">Designation</string>
    <string name="et_description_addcomponent">Description</string>
    <string name="et_material_addcomponent">Material</string>
    <string name="et_filters_addcomponent">Filters</string>
    <string name="et_date_addcomponent">Date</string>
    <string name="button_adddocuments">Insert Documents/Certificates</string>
    <string name="button_Insert">Insert</string>
    <string name="button_associateComponent">Add to existing components</string>
    <string name="label_associatecomp">Choose the components that created this new one</string>
    <string name="et_childcomponent">Child Component</string>
    <string name="et_parentcomponent">Parent Reference Number</string>
    <string name="et_activity">Activity</string>
    <string name="et_quantity">Quantity</string>
    <string name="add">ADD</string>
    <string name="erroLogin">Username or password not found. Try again!</string>
    <string name="insertIdComp">Reference Number</string>
    <string name="chooseFiler">Choose filter</string>
    <string name="choseFiler">Chose filter</string>
    <string name="component">Component</string>
    <string name="name">NAME:</string>
    <string name="product">PRODUCT:</string>
    <string name="material">MATERIAL:</string>
    <string name="tv_show_documents"><u>Associated documents</u></string>
    <string name="associated_components">Associated Components:</string>
    <string name="pending">Pending</string>
    <string name="sendComponent">Send</string>
    <string name="editComponent">Edit</string>
    <string name="invalid_token">Your token are not valid anymore!</string>
    <string name="et_referenceNumber_addcomponent">Reference Number</string>
    <string name="product_type_add_component">Product Type</string>
    <string name="initial_amount_add_component">Initial Amount</string>
    <string name="is_serial_number_add_component">IS A SERIAL NUMBER?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="missing_fields">Missing fields.</string>
    <string name="success">Success!</string>
    <string name="error">Error!</string>
    <string name="reference_number">REFERENCE NUMBER:</string>
    <string name="designation">DESIGNATION:</string>
    <string name="product_type">PRODUCT TYPE:</string>
    <string name="initial_amout">INITIAL AMOUNT:</string>
    <string name="errorDontExistRN">The reference number doesn\'t exist.</string>
    <string name="error_invalid_request">Invalid request.</string>
    <string name="search_rn">Reference Number</string>
    <string name="search_designation">Designation</string>
    <string name="search_type">Product Type</string>
    <string name="dialog_list_comp">In this list you can see the different components. What is the designation, the type of product and the reference number.</string>
    <string name="dialog_list_comp_pending">In this list you can see the different pending components. What is the designation, the type of product and the reference number.</string>
    <string name="dialog_add_component">Here you can manually insert a component by entering the different fields. On this page, you can also associate this newly inserted component with a parent component.</string>
    <string name="noAssociatedComponents">No Associated Components</string>
    <string name="parentId">PARENT ID:</string>
    <string name="quantidadeParent">QUANTITY PARENT:</string>
    <string name="designationActivityPending">DESIGNATION ACTIVITY:</string>
    <string name="avaAmount">AVAILABLE AMOUNT:</string>
    <string name="dialog_pending_component">On this page you can see all the information associated with this pending component. In both buttons you can edit the component data or send it to the final list.</string>
    <string name="delete">Delete</string>
    <string name="add_some_component">Please add at least one input component</string>
    <string name="add_some_activity_and_component">Please add the activity name and at least one input component</string>
    <string name="choose_activity">Choose the activity name</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="provide_info">Please provide the necessary information</string>
</resources>