<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/list_line_border">

    <TextView
        android:id="@+id/nomeCompPending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/search_designation"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/idCompPending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/search_rn" />

    <TextView
        android:id="@+id/materialPending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/search_type"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/moreInfoPending"
        android:layout_alignRight="@+id/moreInfoPending"
        android:layout_marginBottom="5dp"
        android:text="@string/pending"
        android:textColor="@color/red"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/moreInfoPending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="7dp"
        android:drawableLeft="@drawable/ic_info_icon"
        android:drawablePadding="4dp"
        android:text="More Info" />

</RelativeLayout>