<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:contentDescription="Logo"
        android:src="@drawable/weast_sea_logo"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/input_border"
        android:hint="@string/userNameHint"
        android:inputType="text"
        android:padding="15dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/input_border"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:padding="15dp"/>

    <Button
        android:id="@+id/showPassword"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignRight="@+id/userName"
        android:layout_marginTop="-50dp"
        android:background="@android:color/transparent"
        android:drawableRight="@drawable/ic_show_password"
        android:onClick="showPassword"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:backgroundTint="#C73D3D"
        android:onClick="login"
        android:padding="5dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/loginButton"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:cornerRadius="20dp"
        />

</RelativeLayout>